Server, Virtual Server 간략하게 정의

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ set(SOURCE_FILES
         HTTP/Request.cpp
         HTTP/Response.cpp
         Server/Connection.cpp
+        Server/Handlers.cpp
+        Server/Server.cpp
+        Server/VirtualServer.cpp
         ThreadPool/ThreadPool.cpp)
 
 add_executable(miniWebserv
