- 라우터 기능 추가 - 커넥션 끊어지는 것 제대로 감지하도록 함 - 스레드풀 I/O 스레드만 - 스레드 ON/OFF 지정

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(SOURCE_FILES
         Source/Event/Event.cpp
         Source/Server/Connection.cpp
         Source/Server/Handlers.cpp
-        Source/Server/Location.cpp
+        Source/Server/Router.cpp
         Source/Server/Server.cpp
         Source/Server/VirtualServer.cpp
         Source/ThreadPool/ThreadPool.cpp
